--- a/.github/workflows/testCfnLint.yaml
+++ b/.github/workflows/testCfnLint.yaml
@@ -16,4 +16,4 @@ jobs:
       - name: Print the Cloud Formation Linter Version & run Linter.
         run: |
           cfn-lint --version
-          cfn-lint -t ./hello-world.yaml
+          cfn-lint -t ./helloWorld.yaml
